testprograms/tests/shouldfail/nomain.jao
/foo()
{
    print("yo wtf");
    throw;
}
